# optim

./: CMakeLists.txt  LICENSE  README.md  codecov.yaml
.github/workflows/: build.yml  test.yml
cmake/: FindCholmod.cmake  optim.cmake
example/: CMakeLists.txt  main.cpp
include/optim/: LBFGS.cpp  LBFGS.h  NewtonSolver.cpp  NewtonSolver.h  SolverBase.cpp  SolverBase.h  filter_var.cpp  filter_var.h
tests/: CMakeLists.txt  helpers.h  test_bfgs.cpp  test_newton.cpp
